Подкатегории статей и вопросов (подменю на странице).

--- a/app/category.html
+++ b/app/category.html
@@ -566,12 +566,12 @@
                         </div>
 
                         <div class="text page-text">
-                            <!--<img src="img/uploads/questions-categories/lada-big.jpg" alt="">-->
-                            <!--<img src="img/uploads/questions-categories/vaz-big.jpg" alt="">-->
-                            <!--<img src="img/uploads/questions-categories/mitsubishi-big.jpg" alt="">-->
-                            <!--<img src="img/uploads/questions-categories/chery-big.jpg" alt="">-->
-                            <!--<img src="img/uploads/questions-categories/slavuta-big.jpg" alt="">-->
-                            <!--<img src="img/uploads/questions-categories/daewoo-big.jpg" alt="">-->
+                            <img src="img/uploads/articles-categories/lada-big.jpg" alt="" class="m-b-20">
+                            <!--<img src="img/uploads/articles-categories/vaz-big.jpg" alt="">-->
+                            <!--<img src="img/uploads/articles-categories/mitsubishi-big.jpg" alt="">-->
+                            <!--<img src="img/uploads/articles-categories/chery-big.jpg" alt="">-->
+                            <!--<img src="img/uploads/articles-categories/slavuta-big.jpg" alt="">-->
+                            <!--<img src="img/uploads/articles-categories/daewoo-matiz-big.jpg" alt="">-->
                             <p>
                                 В жизни каждого автолюбителя наступает такой момент,
                                 когда приходится все делать самому. Засучивать рукава,
@@ -582,63 +582,63 @@
                                 человека узнать и понять устройство своего автомобиля и научиться
                                 чему-то новому.
                             </p>
+                        </div>
 
-                            <div class="row">
-                                <div class="menu submenu">
-                                    <div class="col-md-4 col-sm-4 col-xs-6 full-xxs">
-                                        <a href="#" class="item">
-                                            <img src="img/uploads/questions-categories/lada.jpg" alt="">
-                                            <span class="title">
+                        <div class="row">
+                            <div class="menu submenu title-on-image">
+                                <div class="col-lg-4 col-md-6 col-sm-4 col-xs-6 full-xxs">
+                                    <a href="#" class="item">
+                                        <img src="img/uploads/articles-categories/vaz.jpg" alt="">
+                                        <span class="title">
                                                 ВАЗ 2101, ВАЗ 2102, ВАЗ 2105, ВАЗ 2106, ВАЗ 2107, Жигули, Классика
                                             </span>
-                                            <small class="count">29</small>
-                                        </a>
-                                    </div>
-                                    <div class="col-md-4 col-sm-4 col-xs-6 full-xxs">
-                                        <a href="#" class="item">
-                                            <img src="img/uploads/questions-categories/vaz.jpg" alt="">
-                                            <span class="title">
+                                        <small class="label count">29</small>
+                                    </a>
+                                </div>
+                                <div class="col-lg-4 col-md-6 col-sm-4 col-xs-6 full-xxs">
+                                    <a href="#" class="item">
+                                        <img src="img/uploads/articles-categories/lada.jpg" alt="">
+                                        <span class="title">
                                                 ВАЗ 2108, ВАЗ 2109, ВАЗ 2110, ВАЗ 1117 Калина, ВАЗ 2170 Приора
                                             </span>
-                                            <small class="count">18</small>
-                                        </a>
-                                    </div>
-                                    <div class="col-md-4 col-sm-4 col-xs-6 full-xxs">
-                                        <a href="#" class="item">
-                                            <img src="img/uploads/questions-categories/daewoo.jpg" alt="">
-                                            <span class="title">
+                                        <small class="label count">18</small>
+                                    </a>
+                                </div>
+                                <div class="col-lg-4 col-md-6 col-sm-4 col-xs-6 full-xxs">
+                                    <a href="#" class="item">
+                                        <img src="img/uploads/articles-categories/daewoo-matiz.jpg" alt="">
+                                        <span class="title">
                                                 Daewoo Lanos, Nexia, Matiz, Sens
                                             </span>
-                                            <small class="count">55</small>
-                                        </a>
-                                    </div>
-                                    <div class="col-md-4 col-sm-4 col-xs-6 full-xxs">
-                                        <a href="#" class="item">
-                                            <img src="img/uploads/questions-categories/mitsubishi.jpg" alt="">
-                                            <span class="title">
+                                        <small class="label count">55</small>
+                                    </a>
+                                </div>
+                                <div class="col-lg-4 col-md-6 col-sm-4 col-xs-6 full-xxs">
+                                    <a href="#" class="item">
+                                        <img src="img/uploads/articles-categories/mitsubishi.jpg" alt="">
+                                        <span class="title">
                                                 Mitsubishi (Мицубиси)
                                             </span>
-                                            <small class="count">2</small>
-                                        </a>
-                                    </div>
-                                    <div class="col-md-4 col-sm-4 col-xs-6 full-xxs">
-                                        <a href="#" class="item">
-                                            <img src="img/uploads/questions-categories/slavuta.jpg" alt="">
-                                            <span class="title">
+                                        <small class="label count">2</small>
+                                    </a>
+                                </div>
+                                <div class="col-lg-4 col-md-6 col-sm-4 col-xs-6 full-xxs">
+                                    <a href="#" class="item">
+                                        <img src="img/uploads/articles-categories/slavuta.jpg" alt="">
+                                        <span class="title">
                                                 Таврия, Славута, ЗАЗ-1102
                                             </span>
-                                            <small class="count">10</small>
-                                        </a>
-                                    </div>
-                                    <div class="col-md-4 col-sm-4 col-xs-6 full-xxs">
-                                        <a href="#" class="item">
-                                            <img src="img/uploads/questions-categories/chery.jpg" alt="">
-                                            <span class="title">
+                                        <small class="label count">10</small>
+                                    </a>
+                                </div>
+                                <div class="col-lg-4 col-md-6 col-sm-4 col-xs-6 full-xxs">
+                                    <a href="#" class="item">
+                                        <img src="img/uploads/articles-categories/chery.jpg" alt="">
+                                        <span class="title">
                                                 Chery (Чери)
                                             </span>
-                                            <small class="count">7</small>
-                                        </a>
-                                    </div>
+                                        <small class="label count">7</small>
+                                    </a>
                                 </div>
                             </div>
                         </div>
