--- a/app/page.html
+++ b/app/page.html
@@ -677,49 +677,41 @@
                             <h3>Читайте также:</h3>
                             <div class="row">
                                 <div class="col-md-3 col-sm-3 col-xs-6 full-xxs">
-                                    <div class="item">
-                                        <a href="page.html">
-                                            <img src="img/uploads/articles/statya-1.jpg" alt="" title="" class="item-image">
-                                        </a>
-                                        <a href="page.html" class="text">
+                                    <a href="page.html" class="item">
+                                        <img src="img/uploads/articles/statya-1.jpg" alt="" title="" class="item-image">
+                                        <span class="title text">
                                             Ремонт ключа трещотки своими руками
-                                        </a>
-                                    </div>
+                                        </span>
+                                    </a>
                                 </div>
                                 <div class="col-md-3 col-sm-3 col-xs-6 full-xxs">
-                                    <div class="item">
-                                        <a href="page.html">
-                                            <img src="img/uploads/articles/statya-2.jpg" alt="" title="" class="item-image">
-                                        </a>
-                                        <a href="page.html" class="text">
+                                    <a href="page.html" class="item">
+                                        <img src="img/uploads/articles/statya-2.jpg" alt="" title="" class="item-image">
+                                        <span class="title text">
                                             Замена рычага передней подвески на автомобиле Daewoo Lanos,
                                             Daewoo Nexia, Chevrolet Lanos, Daewoo Sens
-                                        </a>
-                                    </div>
+                                        </span>
+                                    </a>
                                 </div>
                                 <div class="col-md-3 col-sm-3 col-xs-6 full-xxs">
-                                    <div class="item">
-                                        <a href="page.html">
-                                            <img src="img/uploads/articles/statya-3.jpg" alt="" title="" class="item-image">
-                                        </a>
-                                        <a href="page.html" class="text">
+                                    <a href="page.html" class="item">
+                                        <img src="img/uploads/articles/statya-3.jpg" alt="" title="" class="item-image">
+                                        <span class="title text">
                                             Устраняем люфт и дребезжание ручки переключения
                                             передач или замена уплотняющего...
                                             <!--кольца рычага-->
                                             <!--кпп на автомобилях Daewoo Lanos, Daewoo Nexia,-->
                                             <!--Chevrolet Lanos, Daewoo Sens-->
-                                        </a>
-                                    </div>
+                                        </span>
+                                    </a>
                                 </div>
                                 <div class="col-md-3 col-sm-3 col-xs-6 full-xxs">
-                                    <div class="item">
-                                        <a href="page.html">
-                                            <img src="img/uploads/articles/statya-1.jpg" alt="" title="" class="item-image">
-                                        </a>
-                                        <a href="page.html" class="text">
+                                    <a href="page.html" class="item">
+                                        <img src="img/uploads/articles/statya-1.jpg" alt="" title="" class="item-image">
+                                        <span class="title text">
                                             Ремонт ключа трещотки своими руками
-                                        </a>
-                                    </div>
+                                        </span>
+                                    </a>
                                 </div>
                             </div>
                         </section>
