--- a/app/questions.html
+++ b/app/questions.html
@@ -584,6 +584,47 @@
                             </p>
                         </div>
 
+                        <div class="row">
+                            <div class="menu submenu title-on-image">
+                                <div class="col-lg-4 col-md-6 col-sm-4 col-xs-6 full-xxs">
+                                    <a href="#" class="item">
+                                        <img src="img/uploads/articles-categories/vaz.jpg" alt="">
+                                        <span class="title">
+                                            ВАЗ 2101-2107, Жигули, Классика
+                                        </span>
+                                        <small class="label count">29</small>
+                                    </a>
+                                </div>
+                                <div class="col-lg-4 col-md-6 col-sm-4 col-xs-6 full-xxs">
+                                    <a href="#" class="item">
+                                        <img src="img/uploads/articles-categories/lada.jpg" alt="">
+                                        <span class="title">
+                                            Ваз-2108, Ваз-2109, Ваз-2115, Ваз-2110, Ваз-1117 Калина, Ваз-2170 Приора
+                                        </span>
+                                        <small class="label count">18</small>
+                                    </a>
+                                </div>
+                                <div class="col-lg-4 col-md-6 col-sm-4 col-xs-6 full-xxs">
+                                    <a href="#" class="item">
+                                        <img src="img/uploads/articles-categories/slavuta.jpg" alt="">
+                                        <span class="title">
+                                            ЗАЗ 1102-1105, Таврия, Славута
+                                        </span>
+                                        <small class="label count">10</small>
+                                    </a>
+                                </div>
+                                <div class="col-lg-4 col-md-6 col-sm-4 col-xs-6 full-xxs">
+                                    <a href="#" class="item">
+                                        <img src="img/uploads/articles-categories/daewoo-matiz.jpg" alt="">
+                                        <span class="title">
+                                            Daewoo Lanos, Nexia, Sens, Matiz, Nubira
+                                        </span>
+                                        <small class="label count">55</small>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+
                         <div class="blog with-filters">
                             <div class="filters">
                                 <div class="on-page">
