--- a/app/question.html
+++ b/app/question.html
@@ -185,7 +185,7 @@
                                     <div><span class="visible-xs">XS</span></div>-->
 
                                     <div class="notifications pull-left dropdown">
-                                        <a href="#" class="notification button"><i class="fa fa-bell-o dropdown-arrow"></i></a>
+                                        <a href="#" class="notification dropdown-button"><i class="fa fa-bell-o dropdown-arrow"></i></a>
                                         <div class="dropdown-container">
                                             <div class="container-header">
                                                 <div class="title">
@@ -253,7 +253,7 @@
                                         </div>
                                     </div>
                                     <div class="messages pull-left dropdown">
-                                        <a href="#" class="notification button"><i class="fa fa-paper-plane-o dropdown-arrow"></i></a>
+                                        <a href="#" class="notification dropdown-button"><i class="fa fa-paper-plane-o dropdown-arrow"></i></a>
                                         <div class="dropdown-container">
                                             <div class="container-header">
                                                 <div class="title">
@@ -309,7 +309,7 @@
                                         </div>
                                     </div>
                                     <div class="letters pull-left dropdown">
-                                        <a href="#" class="notification button"><i class="fa fa-envelope dropdown-arrow"></i></a>
+                                        <a href="#" class="notification dropdown-button"><i class="fa fa-envelope dropdown-arrow"></i></a>
                                         <div class="dropdown-container">
                                             <div class="container-header">
                                                 <div class="title">
@@ -362,7 +362,7 @@
                                         </div>
                                     </div>
                                     <div class="user pull-left dropdown">
-                                        <a href="#" class="button">
+                                        <a href="profile.html" class="dropdown-button">
                                             <img src="/img/uploads/avatar.jpg" class="avatar pull-left" alt="">
                                             <i class="fa fa-bars"></i>
                                         </a>
@@ -376,15 +376,15 @@
                                             <div class="delimiter"></div>
                                             <div class="container-body">
                                                 <ul class="menu user-menu">
-                                                    <li><a href="#"><i class="fa fa-car"></i><span>Автомобили</span></a></li>
-                                                    <li><a href="#"><i class="fa fa-question-circle"></i><span>Вопросы</span></a></li>
-                                                    <li><a href="#"><i class="fa fa-book"></i><span>Журнал</span></a></li>
-                                                    <li class="active"><a href="#"><i class="fa fa-comment"></i><span>Комментарии</span></a></li>
-                                                    <li><a href="#"><i class="fa fa-comments"></i><span>Ответы</span></a></li>
-                                                    <li><a href="#"><i class="fa fa-plane"></i><span>Сообщения</span></a></li>
-                                                    <li><a href="#"><i class="fa fa-heart"></i><span>Сохраненное</span></a></li>
-                                                    <li><a href="#"><i class="fa fa-newspaper-o"></i><span>Подписки</span></a></li>
-                                                    <li><a href="#"><i class="fa fa-bell"></i><span>Уведомления</span></a></li>
+                                                    <li><a href="profile-cars.html"><i class="fa fa-car"></i><span>Автомобили</span></a></li>
+                                                    <li><a href="profile-questions.html"><i class="fa fa-question-circle"></i><span>Вопросы</span></a></li>
+                                                    <li><a href="profile-articles.html"><i class="fa fa-book"></i><span>Журнал</span></a></li>
+                                                    <li><a href="profile-comments.html"><i class="fa fa-comment"></i><span>Комментарии</span></a></li>
+                                                    <li><a href="profile-answers.html"><i class="fa fa-comments"></i><span>Ответы</span></a></li>
+                                                    <li><a href="profile-messages.html"><i class="fa fa-plane"></i><span>Сообщения</span></a></li>
+                                                    <li><a href="profile-saved.html"><i class="fa fa-heart"></i><span>Сохраненное</span></a></li>
+                                                    <li><a href="profile-subscriptions.html"><i class="fa fa-newspaper-o"></i><span>Подписки</span></a></li>
+                                                    <li><a href="profile-notifications.html"><i class="fa fa-bell"></i><span>Уведомления</span></a></li>
                                                 </ul>
                                             </div>
                                         </div>
